--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="./public/style.css">
     <title>PixiJS - Template</title>
 </head>
 
 <body>
     <div id="app">
-        <div id="pixi-container"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
 </body>
